kubernetes/apps/default/networkpolicies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-coredns
  namespace: kube-system
spec:
  description: "Allow all workloads to talk to CoreDNS for DNS resolution"
  endpointSelector:
    matchLabels:
      k8s-app: kube-dns
  ingress:
    - fromEndpoints:
        - {}
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-same-namespace
  namespace: kube-system
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
